--- a/helm/linkerd2-app/charts/tracing/templates/tracing-rbac.yaml
+++ b/helm/linkerd2-app/charts/tracing/templates/tracing-rbac.yaml
@@ -12,6 +12,7 @@ metadata:
   labels:
     {{.Values.global.controllerComponentLabel}}: {{.Values.collector.name}}
     {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
+{{- include "partials.image-pull-secrets" . }}
 ---
 ###
 ### linkerd-jaeger RBAC
@@ -25,4 +26,5 @@ metadata:
   labels:
     {{.Values.global.controllerComponentLabel}}: {{.Values.jaeger.name}}
     {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
+{{- include "partials.image-pull-secrets" . }}
 {{- end }}
