--- a/helm/linkerd2-app/templates/heartbeat-rbac.yaml
+++ b/helm/linkerd2-app/templates/heartbeat-rbac.yaml
@@ -41,4 +41,5 @@ metadata:
   labels:
     {{.Values.global.controllerComponentLabel}}: heartbeat
     {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
+{{- include "partials.image-pull-secrets" . }}
 {{- end }}
