--- a/helm/linkerd2-app/templates/psp.yaml
+++ b/helm/linkerd2-app/templates/psp.yaml
@@ -84,6 +84,11 @@ roleRef:
   name: linkerd-psp
   apiGroup: rbac.authorization.k8s.io
 subjects:
+{{ if .Values.tracing.enabled -}}
+- kind: ServiceAccount
+  name: linkerd-collector
+  namespace: {{.Release.Namespace}}
+{{ end -}}
 - kind: ServiceAccount
   name: linkerd-controller
   namespace: {{.Release.Namespace}}
@@ -103,9 +108,16 @@ subjects:
 - kind: ServiceAccount
   name: linkerd-identity
   namespace: {{.Release.Namespace}}
+{{ if .Values.tracing.enabled -}}
+- kind: ServiceAccount
+  name: linkerd-jaeger
+  namespace: {{.Release.Namespace}}
+{{ end -}}
+{{ if .Values.prometheus.enabled -}}
 - kind: ServiceAccount
   name: linkerd-prometheus
   namespace: {{.Release.Namespace}}
+{{ end -}}
 - kind: ServiceAccount
   name: linkerd-proxy-injector
   namespace: {{.Release.Namespace}}
@@ -118,16 +130,3 @@ subjects:
 - kind: ServiceAccount
   name: linkerd-web
   namespace: {{.Release.Namespace}}
-{{- if .Values.smiMetrics.enabled }}
-- kind: ServiceAccount
-  name: linkerd-smi-metrics
-  namespace: {{.Release.Namespace}}
-{{- end }}
-{{- if .Values.global.tracing.enabled }}
-- kind: ServiceAccount
-  name: {{.Values.tracing.collector.name}}
-  namespace: {{.Release.Namespace}}
-- kind: ServiceAccount
-  name: {{.Values.tracing.jaeger.name}}
-  namespace: {{.Release.Namespace}}
-{{- end }}
