switch the issuer scheme

--- a/helm/linkerd2-app/values.yaml
+++ b/helm/linkerd2-app/values.yaml
@@ -40,7 +40,7 @@ global:
   # GS changes: needed now as global value to be available in subcharts including _proxy.tpl
   identity:
     issuer:
-      scheme: &identity_issuer_scheme linkerd.io/cert-manager
+      scheme: &identity_issuer_scheme linkerd.io/tls
 
   identityTrustAnchorsPEM: |
 
