correct subshell invocation

--- a/helm/linkerd2-app/templates/hooks/hook-pre-install-b64encode-trust-anchor.yaml
+++ b/helm/linkerd2-app/templates/hooks/hook-pre-install-b64encode-trust-anchor.yaml
@@ -89,7 +89,7 @@ spec:
         - -c
         - >-
           while true; do
-              export CACERT=`kubectl -n {{ .Release.Namespace }} get secret linkerd-trust-anchor -o jsonpath="{.data['ca\.crt']}";
+              export CACERT=$(kubectl -n {{ .Release.Namespace }} get secret linkerd-trust-anchor -o jsonpath="{.data['ca\.crt']}");
               if [ $? -eq 0 ] && [ ! -z "$CACERT" ]; then
                   break;
               fi;
