--- a/helm/linkerd2-app/templates/hooks/hook-pre-install-b64encode-trust-anchor.yaml
+++ b/helm/linkerd2-app/templates/hooks/hook-pre-install-b64encode-trust-anchor.yaml
@@ -97,8 +97,7 @@ spec:
               sleep 1;
           done;
           # create a secret to be consumed by the identity deployment
-          kubectl create secret generic linkerd-trust-anchor-base64 \
-              -n {{ .Release.Namespace }} --from-literal=ca.crt.base64="${CACRT}"
+          kubectl create secret generic linkerd-trust-anchor-base64 -n {{ .Release.Namespace }} --from-literal=ca.crt.base64="${CACRT}"
       restartPolicy: Never
   backoffLimit: 6
 {{- end}}
