fix rbac to allow secret creation

--- a/helm/linkerd2-app/templates/hooks/hook-pre-install-b64encode-trust-anchor.yaml
+++ b/helm/linkerd2-app/templates/hooks/hook-pre-install-b64encode-trust-anchor.yaml
@@ -17,14 +17,13 @@ rules:
   - ""
   resources:
   - secrets
-  resourceNames:
-  - linkerd-trust-anchor
-  - linkerd-trust-anchor-base64
   verbs:
   - "create"
   - "get"
   - "list"
   - "watch"
+  - "patch"
+  - "update"
 - apiGroups:
   - extensions
   resources:
