--- a/helm/linkerd2-app/templates/hooks/hook-pre-install-identity-certs.yaml
+++ b/helm/linkerd2-app/templates/hooks/hook-pre-install-identity-certs.yaml
@@ -1,6 +1,7 @@
 {{if .Values.identity -}}
-{{if and (.Values.identity.issuer) (eq .Values.identity.issuer.scheme "linkerd.io/cert-manager") -}}
+{{if and (.Values.identity.issuer) (eq .Values.identity.issuer.scheme "kubernetes.io/tls") -}}
 ---
+# Self-signing issuer is used to create the root CA (linkerd-trust-anchor).
 apiVersion: {{ template "cert-manager.apiversion" . }}
 kind: Issuer
 metadata:
@@ -12,10 +13,50 @@ metadata:
   annotations:
     {{.Values.global.createdByAnnotation}}: {{ printf "linkerd/helm %s" .Values.global.linkerdVersion }}
     "helm.sh/hook": pre-install
-    "helm.sh/hook-weight": "-5"
+    "helm.sh/hook-weight": "-6"
 spec:
   selfSigned: {}
 ---
+# This is the root CA cert and must have a long TTL.
+apiVersion: {{ template "cert-manager.apiversion" . }}
+kind: Certificate
+metadata:
+  name: linkerd-trust-anchor
+  namespace: {{.Release.Namespace}}
+  labels:
+    {{.Values.global.controllerComponentLabel}}: identity
+    {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
+  annotations:
+    {{.Values.global.createdByAnnotation}}: {{ printf "linkerd/helm %s" .Values.global.linkerdVersion }}
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-weight": "-5"
+spec:
+  commonName: identity.{{.Release.Namespace}}.{{.Values.global.clusterDomain}}
+  duration: 43800h # 5 years
+  isCA: true
+  issuerRef:
+    name: linkerd-selfsigning-issuer
+  keyAlgorithm: ecdsa
+  secretName: linkerd-trust-anchor
+---
+# This issuer uses the root CA to sign short-lived CA certs used by the identity deployment.
+apiVersion: {{ template "cert-manager.apiversion" . }}
+kind: Issuer
+metadata:
+  name: linkerd-trust-anchor-issuer
+  namespace: {{.Release.Namespace}}
+  labels:
+    {{.Values.global.controllerComponentLabel}}: identity
+    {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
+  annotations:
+    {{.Values.global.createdByAnnotation}}: {{ printf "linkerd/helm %s" .Values.global.linkerdVersion }}
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-weight": "-4"
+spec:
+  ca:
+    secretName: linkerd-trust-anchor
+---
+# This is the dynamic identity CA which is re-issued every 24 hours.
 apiVersion: {{ template "cert-manager.apiversion" . }}
 kind: Certificate
 metadata:
@@ -27,13 +68,20 @@ metadata:
   annotations:
     {{.Values.global.createdByAnnotation}}: {{ printf "linkerd/helm %s" .Values.global.linkerdVersion }}
     "helm.sh/hook": pre-install
-    "helm.sh/hook-weight": "-5"
+    "helm.sh/hook-weight": "-3"
 spec:
-  secretName: linkerd-identity-issuer
   commonName: identity.{{.Release.Namespace}}.{{.Values.global.clusterDomain}}
+  duration: 24h
   isCA: true
-  keyAlgorithm: ecdsa
   issuerRef:
-    name: linkerd-selfsigning-issuer
+    name: linkerd-trust-anchor-issuer
+  keyAlgorithm: ecdsa
+  renewBefore: 1h
+  secretName: linkerd-identity-issuer
+  usages:
+  - cert sign
+  - crl sign
+  - server auth
+  - client auth
 {{- end}}
 {{- end}}
